 * Support for modifying C* Collections using saveToCassandra (SPARKC-147)
 * Added the ability to use Custom Mappers with repartitionByCassandraReplica (SPARKC-104)
 * Added methods to work with tuples in Java API (SPARKC-206)
 * Fixed input_split_size_in_mb property (SPARKC-208)
 * Fixed DataSources tests when connecting to an external cluster (SPARKC-178)

1.3.0 M1
 * Removed use of Thrift describe_ring and replaced it with native Java Driver
   support for fetching TokenRanges (SPARKC-93)
 * Support for converting Cassandra UDT column values to Scala case-class objects (SPARKC-4)
   - Introduced a common interface for TableDef and UserDefinedType
   - Removed ClassTag from ColumnMapper
   - Removed by-index column references and replaced them with by-name ColumnRefs
   - Created a GettableDataToMappedTypeConverter that can handle UDTs
   - ClassBasedRowReader delegates object conversion instead of doing it by itself;
     this improves unit-testability of code
 * Decoupled PredicatePushDown logic from Spark (SPARKC-166)
   - added support for Filter and Expression predicates
   - improved code testability and added unit-tests
 * Basic Datasource API integration and keyspace/cluster level settings (SPARKC-112, SPARKC-162)
 * Added support to use aliases with Tuples (SPARKC-125)

********************************************************************************

1.2.3 (unreleased)
 * Support for connection compressions configuration (SPARKC-124)
 * Support for connection encryption configuration (SPARKC-118)
 * Fix a bug to support upper case characters in UDT (SPARKC-201)
 * Meaningful exception if some partition key column is null (SPARKC-198)
 * Improved reliability of thread-leak test (SPARKC-205)

1.2.2
 * Updated Spark version to 1.2.2, Scala to 2.10.5 / 2.11.6
 * Enabled Java API artifact generation for Scala 2.11.x (SPARKC-130)
 * Fixed a bug preventing a custom type converter from being used
   when saving data. RowWriter implementations must